// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Secret Manager Wizard should be able to render first and second step form 1`] = `
<div>
  <div
    class="StepWizard--main wizardNav StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="aws-kms"
        >
          <svg
            fill="none"
            height="37"
            style="border-radius: 8px;"
            viewBox="0 0 28 28"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M28 0H0V28H28V0Z"
              fill="url(#paint0_linear)"
            />
            <path
              d="M9.14671 23.1476C9.0937 23.1475 9.04132 23.1362 8.99304 23.1143C8.94476 23.0924 8.9017 23.0605 8.86671 23.0207L7.56005 21.5273C7.50002 21.4593 7.46684 21.3717 7.46671 21.2809V20.3177L6.45498 19.306C6.41999 19.2713 6.39221 19.23 6.37326 19.1845C6.35431 19.139 6.34455 19.0902 6.34455 19.0409C6.34455 18.9916 6.35431 18.9428 6.37326 18.8974C6.39221 18.8519 6.41999 18.8106 6.45498 18.7759L7.46671 17.7679V17.3311L6.45498 16.3193C6.41999 16.2846 6.39221 16.2433 6.37326 16.1978C6.35431 16.1523 6.34455 16.1035 6.34455 16.0543C6.34455 16.005 6.35431 15.9562 6.37326 15.9107C6.39221 15.8652 6.41999 15.8239 6.45498 15.7892L7.46671 14.7812V13.8777C6.57649 13.5372 5.8125 12.9311 5.27825 12.1418C4.74401 11.3525 4.46535 10.418 4.48004 9.46492C4.48747 8.22725 4.98626 7.04321 5.86668 6.17329C6.7471 5.30337 7.93704 4.81883 9.17471 4.82626C10.4124 4.83368 11.5964 5.33247 12.4663 6.21289C13.3363 7.09331 13.8208 8.28325 13.8134 9.52092C13.8169 10.464 13.5329 11.3859 12.9994 12.1635C12.4658 12.9412 11.7079 13.5379 10.8267 13.874V21.6543C10.8267 21.7082 10.815 21.7615 10.7925 21.8104C10.7699 21.8594 10.737 21.9029 10.696 21.938L9.38938 23.058C9.32175 23.1158 9.23569 23.1476 9.14671 23.1476ZM8.21338 21.1391L9.18405 22.2591L10.08 21.4825V13.6089C10.0763 13.5266 10.0999 13.4453 10.1471 13.3778C10.1944 13.3102 10.2627 13.2602 10.3414 13.2356C11.2298 12.9495 11.9869 12.3556 12.4762 11.5607C12.9655 10.7658 13.1548 9.82238 13.01 8.9003C12.8652 7.97823 12.3958 7.13818 11.6865 6.53153C10.9772 5.92488 10.0745 5.59152 9.14111 5.59152C8.20774 5.59152 7.30506 5.92488 6.59572 6.53153C5.88638 7.13818 5.41703 7.97823 5.27225 8.9003C5.12746 9.82238 5.31677 10.7658 5.80604 11.5607C6.29532 12.3556 7.05239 12.9495 7.94085 13.2356C8.0216 13.2582 8.0924 13.3073 8.14184 13.375C8.19128 13.4427 8.21648 13.5251 8.21338 13.6089V14.9343C8.21366 14.9834 8.20425 15.0321 8.18567 15.0776C8.16709 15.1231 8.13971 15.1644 8.10511 15.1993L7.25018 16.0543L8.10511 16.9092C8.13971 16.9441 8.16709 16.9854 8.18567 17.0309C8.20425 17.0764 8.21366 17.1251 8.21338 17.1743V17.9209C8.21297 18.0189 8.17408 18.1127 8.10511 18.1823L7.25018 19.0409L8.10511 19.8959C8.13971 19.9307 8.16709 19.9721 8.18567 20.0176C8.20425 20.0631 8.21366 20.1118 8.21338 20.1609V21.1391ZM9.14671 9.89426C8.81444 9.89426 8.48963 9.79573 8.21335 9.61113C7.93708 9.42652 7.72175 9.16414 7.59459 8.85716C7.46744 8.55018 7.43417 8.21239 7.49899 7.8865C7.56382 7.56062 7.72382 7.26127 7.95877 7.02632C8.19373 6.79136 8.49307 6.63136 8.81896 6.56654C9.14485 6.50171 9.48264 6.53498 9.78962 6.66214C10.0966 6.78929 10.359 7.00462 10.5436 7.2809C10.7282 7.55717 10.8267 7.88198 10.8267 8.21426C10.8257 8.65952 10.6484 9.08626 10.3336 9.40111C10.0187 9.71595 9.59197 9.89327 9.14671 9.89426ZM9.14671 7.28092C8.96212 7.28092 8.78167 7.33566 8.62818 7.43822C8.47469 7.54077 8.35507 7.68654 8.28443 7.85708C8.21378 8.02763 8.1953 8.21529 8.23131 8.39634C8.26733 8.57739 8.35622 8.74369 8.48675 8.87422C8.61728 9.00475 8.78358 9.09364 8.96463 9.12966C9.14568 9.16567 9.33334 9.14719 9.50388 9.07654C9.67443 9.0059 9.8202 8.88627 9.92275 8.73279C10.0253 8.5793 10.08 8.39885 10.08 8.21426C10.08 7.96672 9.98171 7.72932 9.80668 7.55429C9.63165 7.37926 9.39425 7.28092 9.14671 7.28092Z"
              fill="white"
            />
            <path
              d="M22.8071 20.5348H11.5735V19.7881H22.7735V11.5748H14.5602V10.8281H22.8071C22.9939 10.8271 23.1736 10.8999 23.3072 11.0306C23.4407 11.1613 23.5172 11.3394 23.5202 11.5263V19.8367C23.5172 20.0235 23.4407 20.2016 23.3072 20.3323C23.1736 20.463 22.9939 20.5358 22.8071 20.5348Z"
              fill="white"
            />
            <path
              d="M12.8801 16.9867C12.5847 16.9867 12.296 16.8991 12.0504 16.735C11.8048 16.5709 11.6134 16.3377 11.5004 16.0648C11.3874 15.7919 11.3578 15.4917 11.4154 15.202C11.473 14.9123 11.6153 14.6462 11.8241 14.4374C12.033 14.2285 12.299 14.0863 12.5887 14.0287C12.8784 13.9711 13.1787 14.0006 13.4515 14.1137C13.7244 14.2267 13.9576 14.4181 14.1217 14.6637C14.2858 14.9093 14.3734 15.198 14.3734 15.4933C14.3734 15.8894 14.2161 16.2692 13.936 16.5493C13.6559 16.8293 13.2761 16.9867 12.8801 16.9867ZM12.8801 14.7467C12.7324 14.7467 12.588 14.7905 12.4652 14.8725C12.3424 14.9545 12.2467 15.0712 12.1902 15.2076C12.1337 15.344 12.1189 15.4942 12.1477 15.639C12.1765 15.7838 12.2477 15.9169 12.3521 16.0213C12.4565 16.1257 12.5895 16.1968 12.7344 16.2257C12.8792 16.2545 13.0294 16.2397 13.1658 16.1832C13.3022 16.1267 13.4188 16.031 13.5009 15.9082C13.5829 15.7854 13.6267 15.641 13.6267 15.4933C13.6267 15.2953 13.5481 15.1054 13.408 14.9654C13.268 14.8253 13.0781 14.7467 12.8801 14.7467Z"
              fill="white"
            />
            <path
              d="M16.6135 16.9867C16.3181 16.9867 16.0294 16.8991 15.7838 16.735C15.5382 16.5709 15.3468 16.3377 15.2338 16.0648C15.1208 15.7919 15.0912 15.4917 15.1488 15.202C15.2064 14.9123 15.3487 14.6462 15.5575 14.4374C15.7664 14.2285 16.0324 14.0863 16.3221 14.0287C16.6118 13.9711 16.9121 14.0006 17.1849 14.1137C17.4578 14.2267 17.691 14.4181 17.8551 14.6637C18.0192 14.9093 18.1068 15.198 18.1068 15.4933C18.1068 15.8894 17.9494 16.2692 17.6694 16.5493C17.3893 16.8293 17.0095 16.9867 16.6135 16.9867ZM16.6135 14.7467C16.4658 14.7467 16.3214 14.7905 16.1986 14.8725C16.0758 14.9545 15.9801 15.0712 15.9236 15.2076C15.8671 15.344 15.8523 15.4942 15.8811 15.639C15.9099 15.7838 15.9811 15.9169 16.0855 16.0213C16.1899 16.1257 16.3229 16.1968 16.4678 16.2257C16.6126 16.2545 16.7628 16.2397 16.8992 16.1832C17.0356 16.1267 17.1522 16.031 17.2343 15.9082C17.3163 15.7854 17.3601 15.641 17.3601 15.4933C17.3601 15.2953 17.2815 15.1054 17.1414 14.9654C17.0014 14.8253 16.8115 14.7467 16.6135 14.7467Z"
              fill="white"
            />
            <path
              d="M14.1868 17.9199H11.5735V18.6666H14.1868V17.9199Z"
              fill="white"
            />
            <path
              d="M17.92 17.9199H15.3066V18.6666H17.92V17.9199Z"
              fill="white"
            />
            <path
              d="M21.6534 17.9199H19.04V18.6666H21.6534V17.9199Z"
              fill="white"
            />
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="paint0_linear"
                x1="-5.79758"
                x2="33.8004"
                y1="33.801"
                y2="-5.79702"
              >
                <stop
                  stop-color="#BD0816"
                />
                <stop
                  offset="1"
                  stop-color="#FF5252"
                />
              </lineargradient>
            </defs>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.awsKms
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3"
        >
          overview
        </p>
        <div
          class="StyledProps--font StyledProps--main connectorForm"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer TextInput--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <div
                          class="Text--withDocsTooltip"
                          data-tooltip-id="connectorDetailsStepFormAwsKms_identifier"
                        >
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            Id
                          </p>
                        </div>
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                              tabindex="0"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              />
                            </div>
                          </span>
                        </span>
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Edit"
                          style="vertical-align: middle; cursor: pointer;"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="connectorDetailsStepFormAwsKms_name"
                          >
                            name
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              placeholder="common.namePlaceholder"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main bp3-label descriptionLabel"
                      >
                        optionalField
                        <span
                          class="bp3-icon StyledProps--main editOpen"
                          data-icon="Edit"
                          data-name="edit"
                          data-testid="description-edit"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main bp3-label descriptionLabel"
                      >
                        optionalField
                        <span
                          class="bp3-icon StyledProps--main editOpen"
                          data-icon="Edit"
                          data-name="edit"
                          data-testid="tags-edit"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should be able to render first and second step form 2`] = `
<div>
  <div
    class="StepWizard--main wizardNav StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="aws-kms"
        >
          <svg
            fill="none"
            height="37"
            style="border-radius: 8px;"
            viewBox="0 0 28 28"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M28 0H0V28H28V0Z"
              fill="url(#paint0_linear)"
            />
            <path
              d="M9.14671 23.1476C9.0937 23.1475 9.04132 23.1362 8.99304 23.1143C8.94476 23.0924 8.9017 23.0605 8.86671 23.0207L7.56005 21.5273C7.50002 21.4593 7.46684 21.3717 7.46671 21.2809V20.3177L6.45498 19.306C6.41999 19.2713 6.39221 19.23 6.37326 19.1845C6.35431 19.139 6.34455 19.0902 6.34455 19.0409C6.34455 18.9916 6.35431 18.9428 6.37326 18.8974C6.39221 18.8519 6.41999 18.8106 6.45498 18.7759L7.46671 17.7679V17.3311L6.45498 16.3193C6.41999 16.2846 6.39221 16.2433 6.37326 16.1978C6.35431 16.1523 6.34455 16.1035 6.34455 16.0543C6.34455 16.005 6.35431 15.9562 6.37326 15.9107C6.39221 15.8652 6.41999 15.8239 6.45498 15.7892L7.46671 14.7812V13.8777C6.57649 13.5372 5.8125 12.9311 5.27825 12.1418C4.74401 11.3525 4.46535 10.418 4.48004 9.46492C4.48747 8.22725 4.98626 7.04321 5.86668 6.17329C6.7471 5.30337 7.93704 4.81883 9.17471 4.82626C10.4124 4.83368 11.5964 5.33247 12.4663 6.21289C13.3363 7.09331 13.8208 8.28325 13.8134 9.52092C13.8169 10.464 13.5329 11.3859 12.9994 12.1635C12.4658 12.9412 11.7079 13.5379 10.8267 13.874V21.6543C10.8267 21.7082 10.815 21.7615 10.7925 21.8104C10.7699 21.8594 10.737 21.9029 10.696 21.938L9.38938 23.058C9.32175 23.1158 9.23569 23.1476 9.14671 23.1476ZM8.21338 21.1391L9.18405 22.2591L10.08 21.4825V13.6089C10.0763 13.5266 10.0999 13.4453 10.1471 13.3778C10.1944 13.3102 10.2627 13.2602 10.3414 13.2356C11.2298 12.9495 11.9869 12.3556 12.4762 11.5607C12.9655 10.7658 13.1548 9.82238 13.01 8.9003C12.8652 7.97823 12.3958 7.13818 11.6865 6.53153C10.9772 5.92488 10.0745 5.59152 9.14111 5.59152C8.20774 5.59152 7.30506 5.92488 6.59572 6.53153C5.88638 7.13818 5.41703 7.97823 5.27225 8.9003C5.12746 9.82238 5.31677 10.7658 5.80604 11.5607C6.29532 12.3556 7.05239 12.9495 7.94085 13.2356C8.0216 13.2582 8.0924 13.3073 8.14184 13.375C8.19128 13.4427 8.21648 13.5251 8.21338 13.6089V14.9343C8.21366 14.9834 8.20425 15.0321 8.18567 15.0776C8.16709 15.1231 8.13971 15.1644 8.10511 15.1993L7.25018 16.0543L8.10511 16.9092C8.13971 16.9441 8.16709 16.9854 8.18567 17.0309C8.20425 17.0764 8.21366 17.1251 8.21338 17.1743V17.9209C8.21297 18.0189 8.17408 18.1127 8.10511 18.1823L7.25018 19.0409L8.10511 19.8959C8.13971 19.9307 8.16709 19.9721 8.18567 20.0176C8.20425 20.0631 8.21366 20.1118 8.21338 20.1609V21.1391ZM9.14671 9.89426C8.81444 9.89426 8.48963 9.79573 8.21335 9.61113C7.93708 9.42652 7.72175 9.16414 7.59459 8.85716C7.46744 8.55018 7.43417 8.21239 7.49899 7.8865C7.56382 7.56062 7.72382 7.26127 7.95877 7.02632C8.19373 6.79136 8.49307 6.63136 8.81896 6.56654C9.14485 6.50171 9.48264 6.53498 9.78962 6.66214C10.0966 6.78929 10.359 7.00462 10.5436 7.2809C10.7282 7.55717 10.8267 7.88198 10.8267 8.21426C10.8257 8.65952 10.6484 9.08626 10.3336 9.40111C10.0187 9.71595 9.59197 9.89327 9.14671 9.89426ZM9.14671 7.28092C8.96212 7.28092 8.78167 7.33566 8.62818 7.43822C8.47469 7.54077 8.35507 7.68654 8.28443 7.85708C8.21378 8.02763 8.1953 8.21529 8.23131 8.39634C8.26733 8.57739 8.35622 8.74369 8.48675 8.87422C8.61728 9.00475 8.78358 9.09364 8.96463 9.12966C9.14568 9.16567 9.33334 9.14719 9.50388 9.07654C9.67443 9.0059 9.8202 8.88627 9.92275 8.73279C10.0253 8.5793 10.08 8.39885 10.08 8.21426C10.08 7.96672 9.98171 7.72932 9.80668 7.55429C9.63165 7.37926 9.39425 7.28092 9.14671 7.28092Z"
              fill="white"
            />
            <path
              d="M22.8071 20.5348H11.5735V19.7881H22.7735V11.5748H14.5602V10.8281H22.8071C22.9939 10.8271 23.1736 10.8999 23.3072 11.0306C23.4407 11.1613 23.5172 11.3394 23.5202 11.5263V19.8367C23.5172 20.0235 23.4407 20.2016 23.3072 20.3323C23.1736 20.463 22.9939 20.5358 22.8071 20.5348Z"
              fill="white"
            />
            <path
              d="M12.8801 16.9867C12.5847 16.9867 12.296 16.8991 12.0504 16.735C11.8048 16.5709 11.6134 16.3377 11.5004 16.0648C11.3874 15.7919 11.3578 15.4917 11.4154 15.202C11.473 14.9123 11.6153 14.6462 11.8241 14.4374C12.033 14.2285 12.299 14.0863 12.5887 14.0287C12.8784 13.9711 13.1787 14.0006 13.4515 14.1137C13.7244 14.2267 13.9576 14.4181 14.1217 14.6637C14.2858 14.9093 14.3734 15.198 14.3734 15.4933C14.3734 15.8894 14.2161 16.2692 13.936 16.5493C13.6559 16.8293 13.2761 16.9867 12.8801 16.9867ZM12.8801 14.7467C12.7324 14.7467 12.588 14.7905 12.4652 14.8725C12.3424 14.9545 12.2467 15.0712 12.1902 15.2076C12.1337 15.344 12.1189 15.4942 12.1477 15.639C12.1765 15.7838 12.2477 15.9169 12.3521 16.0213C12.4565 16.1257 12.5895 16.1968 12.7344 16.2257C12.8792 16.2545 13.0294 16.2397 13.1658 16.1832C13.3022 16.1267 13.4188 16.031 13.5009 15.9082C13.5829 15.7854 13.6267 15.641 13.6267 15.4933C13.6267 15.2953 13.5481 15.1054 13.408 14.9654C13.268 14.8253 13.0781 14.7467 12.8801 14.7467Z"
              fill="white"
            />
            <path
              d="M16.6135 16.9867C16.3181 16.9867 16.0294 16.8991 15.7838 16.735C15.5382 16.5709 15.3468 16.3377 15.2338 16.0648C15.1208 15.7919 15.0912 15.4917 15.1488 15.202C15.2064 14.9123 15.3487 14.6462 15.5575 14.4374C15.7664 14.2285 16.0324 14.0863 16.3221 14.0287C16.6118 13.9711 16.9121 14.0006 17.1849 14.1137C17.4578 14.2267 17.691 14.4181 17.8551 14.6637C18.0192 14.9093 18.1068 15.198 18.1068 15.4933C18.1068 15.8894 17.9494 16.2692 17.6694 16.5493C17.3893 16.8293 17.0095 16.9867 16.6135 16.9867ZM16.6135 14.7467C16.4658 14.7467 16.3214 14.7905 16.1986 14.8725C16.0758 14.9545 15.9801 15.0712 15.9236 15.2076C15.8671 15.344 15.8523 15.4942 15.8811 15.639C15.9099 15.7838 15.9811 15.9169 16.0855 16.0213C16.1899 16.1257 16.3229 16.1968 16.4678 16.2257C16.6126 16.2545 16.7628 16.2397 16.8992 16.1832C17.0356 16.1267 17.1522 16.031 17.2343 15.9082C17.3163 15.7854 17.3601 15.641 17.3601 15.4933C17.3601 15.2953 17.2815 15.1054 17.1414 14.9654C17.0014 14.8253 16.8115 14.7467 16.6135 14.7467Z"
              fill="white"
            />
            <path
              d="M14.1868 17.9199H11.5735V18.6666H14.1868V17.9199Z"
              fill="white"
            />
            <path
              d="M17.92 17.9199H15.3066V18.6666H17.92V17.9199Z"
              fill="white"
            />
            <path
              d="M21.6534 17.9199H19.04V18.6666H21.6534V17.9199Z"
              fill="white"
            />
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="paint0_linear"
                x1="-5.79758"
                x2="33.8004"
                y1="33.801"
                y2="-5.79702"
              >
                <stop
                  stop-color="#BD0816"
                />
                <stop
                  offset="1"
                  stop-color="#FF5252"
                />
              </lineargradient>
            </defs>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.awsKms
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3"
        >
          overview
        </p>
        <div
          class="StyledProps--font StyledProps--main connectorForm"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer TextInput--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <div
                          class="Text--withDocsTooltip"
                          data-tooltip-id="connectorDetailsStepFormAwsKms_identifier"
                        >
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            Id
                          </p>
                        </div>
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text InputWithIdentifier--idValue"
                              tabindex="0"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              >
                                dummy_name
                              </span>
                            </div>
                          </span>
                        </span>
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Edit"
                          style="vertical-align: middle; cursor: pointer;"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="connectorDetailsStepFormAwsKms_name"
                          >
                            name
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              placeholder="common.namePlaceholder"
                              type="text"
                              value="dummy name"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main bp3-label descriptionLabel"
                      >
                        optionalField
                        <span
                          class="bp3-icon StyledProps--main editOpen"
                          data-icon="Edit"
                          data-name="edit"
                          data-testid="description-edit"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main bp3-label descriptionLabel"
                      >
                        optionalField
                        <span
                          class="bp3-icon StyledProps--main editOpen"
                          data-icon="Edit"
                          data-name="edit"
                          data-testid="tags-edit"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should be able to render first and second step form 3`] = `
<div>
  <div
    class="StepWizard--main wizardNav StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="aws-kms"
        >
          <svg
            fill="none"
            height="37"
            style="border-radius: 8px;"
            viewBox="0 0 28 28"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M28 0H0V28H28V0Z"
              fill="url(#paint0_linear)"
            />
            <path
              d="M9.14671 23.1476C9.0937 23.1475 9.04132 23.1362 8.99304 23.1143C8.94476 23.0924 8.9017 23.0605 8.86671 23.0207L7.56005 21.5273C7.50002 21.4593 7.46684 21.3717 7.46671 21.2809V20.3177L6.45498 19.306C6.41999 19.2713 6.39221 19.23 6.37326 19.1845C6.35431 19.139 6.34455 19.0902 6.34455 19.0409C6.34455 18.9916 6.35431 18.9428 6.37326 18.8974C6.39221 18.8519 6.41999 18.8106 6.45498 18.7759L7.46671 17.7679V17.3311L6.45498 16.3193C6.41999 16.2846 6.39221 16.2433 6.37326 16.1978C6.35431 16.1523 6.34455 16.1035 6.34455 16.0543C6.34455 16.005 6.35431 15.9562 6.37326 15.9107C6.39221 15.8652 6.41999 15.8239 6.45498 15.7892L7.46671 14.7812V13.8777C6.57649 13.5372 5.8125 12.9311 5.27825 12.1418C4.74401 11.3525 4.46535 10.418 4.48004 9.46492C4.48747 8.22725 4.98626 7.04321 5.86668 6.17329C6.7471 5.30337 7.93704 4.81883 9.17471 4.82626C10.4124 4.83368 11.5964 5.33247 12.4663 6.21289C13.3363 7.09331 13.8208 8.28325 13.8134 9.52092C13.8169 10.464 13.5329 11.3859 12.9994 12.1635C12.4658 12.9412 11.7079 13.5379 10.8267 13.874V21.6543C10.8267 21.7082 10.815 21.7615 10.7925 21.8104C10.7699 21.8594 10.737 21.9029 10.696 21.938L9.38938 23.058C9.32175 23.1158 9.23569 23.1476 9.14671 23.1476ZM8.21338 21.1391L9.18405 22.2591L10.08 21.4825V13.6089C10.0763 13.5266 10.0999 13.4453 10.1471 13.3778C10.1944 13.3102 10.2627 13.2602 10.3414 13.2356C11.2298 12.9495 11.9869 12.3556 12.4762 11.5607C12.9655 10.7658 13.1548 9.82238 13.01 8.9003C12.8652 7.97823 12.3958 7.13818 11.6865 6.53153C10.9772 5.92488 10.0745 5.59152 9.14111 5.59152C8.20774 5.59152 7.30506 5.92488 6.59572 6.53153C5.88638 7.13818 5.41703 7.97823 5.27225 8.9003C5.12746 9.82238 5.31677 10.7658 5.80604 11.5607C6.29532 12.3556 7.05239 12.9495 7.94085 13.2356C8.0216 13.2582 8.0924 13.3073 8.14184 13.375C8.19128 13.4427 8.21648 13.5251 8.21338 13.6089V14.9343C8.21366 14.9834 8.20425 15.0321 8.18567 15.0776C8.16709 15.1231 8.13971 15.1644 8.10511 15.1993L7.25018 16.0543L8.10511 16.9092C8.13971 16.9441 8.16709 16.9854 8.18567 17.0309C8.20425 17.0764 8.21366 17.1251 8.21338 17.1743V17.9209C8.21297 18.0189 8.17408 18.1127 8.10511 18.1823L7.25018 19.0409L8.10511 19.8959C8.13971 19.9307 8.16709 19.9721 8.18567 20.0176C8.20425 20.0631 8.21366 20.1118 8.21338 20.1609V21.1391ZM9.14671 9.89426C8.81444 9.89426 8.48963 9.79573 8.21335 9.61113C7.93708 9.42652 7.72175 9.16414 7.59459 8.85716C7.46744 8.55018 7.43417 8.21239 7.49899 7.8865C7.56382 7.56062 7.72382 7.26127 7.95877 7.02632C8.19373 6.79136 8.49307 6.63136 8.81896 6.56654C9.14485 6.50171 9.48264 6.53498 9.78962 6.66214C10.0966 6.78929 10.359 7.00462 10.5436 7.2809C10.7282 7.55717 10.8267 7.88198 10.8267 8.21426C10.8257 8.65952 10.6484 9.08626 10.3336 9.40111C10.0187 9.71595 9.59197 9.89327 9.14671 9.89426ZM9.14671 7.28092C8.96212 7.28092 8.78167 7.33566 8.62818 7.43822C8.47469 7.54077 8.35507 7.68654 8.28443 7.85708C8.21378 8.02763 8.1953 8.21529 8.23131 8.39634C8.26733 8.57739 8.35622 8.74369 8.48675 8.87422C8.61728 9.00475 8.78358 9.09364 8.96463 9.12966C9.14568 9.16567 9.33334 9.14719 9.50388 9.07654C9.67443 9.0059 9.8202 8.88627 9.92275 8.73279C10.0253 8.5793 10.08 8.39885 10.08 8.21426C10.08 7.96672 9.98171 7.72932 9.80668 7.55429C9.63165 7.37926 9.39425 7.28092 9.14671 7.28092Z"
              fill="white"
            />
            <path
              d="M22.8071 20.5348H11.5735V19.7881H22.7735V11.5748H14.5602V10.8281H22.8071C22.9939 10.8271 23.1736 10.8999 23.3072 11.0306C23.4407 11.1613 23.5172 11.3394 23.5202 11.5263V19.8367C23.5172 20.0235 23.4407 20.2016 23.3072 20.3323C23.1736 20.463 22.9939 20.5358 22.8071 20.5348Z"
              fill="white"
            />
            <path
              d="M12.8801 16.9867C12.5847 16.9867 12.296 16.8991 12.0504 16.735C11.8048 16.5709 11.6134 16.3377 11.5004 16.0648C11.3874 15.7919 11.3578 15.4917 11.4154 15.202C11.473 14.9123 11.6153 14.6462 11.8241 14.4374C12.033 14.2285 12.299 14.0863 12.5887 14.0287C12.8784 13.9711 13.1787 14.0006 13.4515 14.1137C13.7244 14.2267 13.9576 14.4181 14.1217 14.6637C14.2858 14.9093 14.3734 15.198 14.3734 15.4933C14.3734 15.8894 14.2161 16.2692 13.936 16.5493C13.6559 16.8293 13.2761 16.9867 12.8801 16.9867ZM12.8801 14.7467C12.7324 14.7467 12.588 14.7905 12.4652 14.8725C12.3424 14.9545 12.2467 15.0712 12.1902 15.2076C12.1337 15.344 12.1189 15.4942 12.1477 15.639C12.1765 15.7838 12.2477 15.9169 12.3521 16.0213C12.4565 16.1257 12.5895 16.1968 12.7344 16.2257C12.8792 16.2545 13.0294 16.2397 13.1658 16.1832C13.3022 16.1267 13.4188 16.031 13.5009 15.9082C13.5829 15.7854 13.6267 15.641 13.6267 15.4933C13.6267 15.2953 13.5481 15.1054 13.408 14.9654C13.268 14.8253 13.0781 14.7467 12.8801 14.7467Z"
              fill="white"
            />
            <path
              d="M16.6135 16.9867C16.3181 16.9867 16.0294 16.8991 15.7838 16.735C15.5382 16.5709 15.3468 16.3377 15.2338 16.0648C15.1208 15.7919 15.0912 15.4917 15.1488 15.202C15.2064 14.9123 15.3487 14.6462 15.5575 14.4374C15.7664 14.2285 16.0324 14.0863 16.3221 14.0287C16.6118 13.9711 16.9121 14.0006 17.1849 14.1137C17.4578 14.2267 17.691 14.4181 17.8551 14.6637C18.0192 14.9093 18.1068 15.198 18.1068 15.4933C18.1068 15.8894 17.9494 16.2692 17.6694 16.5493C17.3893 16.8293 17.0095 16.9867 16.6135 16.9867ZM16.6135 14.7467C16.4658 14.7467 16.3214 14.7905 16.1986 14.8725C16.0758 14.9545 15.9801 15.0712 15.9236 15.2076C15.8671 15.344 15.8523 15.4942 15.8811 15.639C15.9099 15.7838 15.9811 15.9169 16.0855 16.0213C16.1899 16.1257 16.3229 16.1968 16.4678 16.2257C16.6126 16.2545 16.7628 16.2397 16.8992 16.1832C17.0356 16.1267 17.1522 16.031 17.2343 15.9082C17.3163 15.7854 17.3601 15.641 17.3601 15.4933C17.3601 15.2953 17.2815 15.1054 17.1414 14.9654C17.0014 14.8253 16.8115 14.7467 16.6135 14.7467Z"
              fill="white"
            />
            <path
              d="M14.1868 17.9199H11.5735V18.6666H14.1868V17.9199Z"
              fill="white"
            />
            <path
              d="M17.92 17.9199H15.3066V18.6666H17.92V17.9199Z"
              fill="white"
            />
            <path
              d="M21.6534 17.9199H19.04V18.6666H21.6534V17.9199Z"
              fill="white"
            />
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="paint0_linear"
                x1="-5.79758"
                x2="33.8004"
                y1="33.801"
                y2="-5.79702"
              >
                <stop
                  stop-color="#BD0816"
                />
                <stop
                  offset="1"
                  stop-color="#FF5252"
                />
              </lineargradient>
            </defs>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.awsKms
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-top-medium"
        style="width: 64%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--padding-bottom-xlarge"
        >
          details
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="StyledProps--font StyledProps--main StyledProps--margin-top-medium StyledProps--margin-bottom-xxlarge"
                style="min-height: 420px; max-width: 600px;"
              >
                <div
                  class="bp3-form-group"
                  data-id="credType-0"
                >
                  <label
                    class="bp3-label"
                    for="credType"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="awsKmsConfigForm_credType"
                    >
                      credType
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="credType"
                            placeholder="- Select -"
                            style="padding-right: 0px;"
                            type="text"
                            value="connectors.aws.awsAccessKey"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-lead StyledProps--margin-bottom-medium StyledProps--margin-top-xlarge StyledProps--color StyledProps--color-black"
                >
                  authentication
                </p>
                <div
                  class="bp3-form-group"
                  data-id="null-1"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <label
                        class="bp3-label"
                      >
                        <span
                          class="Tooltip--acenter"
                          data-tooltip-id="awsKmsConfigForm_accessKey"
                        >
                          connectors.awsKms.accessKeyLabel
                        </span>
                      </label>
                      <div
                        class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                      >
                        <a
                          class="containerLink"
                          data-testid="accessKey"
                          href="/account/dummy/resources/connectors"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="key-main"
                            style="height: 12px;"
                          >
                            <svg
                              height="24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                fill="none"
                                fill-rule="nonzero"
                                stroke="#1C1C28"
                                stroke-width="0.5"
                              >
                                <path
                                  d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118c.118.01.223.067.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                />
                                <path
                                  d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                />
                              </g>
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                          >
                            <div>
                              createOrSelectSecret
                            </div>
                          </p>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="null-2"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <label
                        class="bp3-label"
                      >
                        <span
                          class="Tooltip--acenter"
                          data-tooltip-id="awsKmsConfigForm_secretKey"
                        >
                          connectors.awsKms.secretKeyLabel
                        </span>
                      </label>
                      <div
                        class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                      >
                        <a
                          class="containerLink"
                          data-testid="secretKey"
                          href="/account/dummy/resources/connectors"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="key-main"
                            style="height: 12px;"
                          >
                            <svg
                              height="24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                fill="none"
                                fill-rule="nonzero"
                                stroke="#1C1C28"
                                stroke-width="0.5"
                              >
                                <path
                                  d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118c.118.01.223.067.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                />
                                <path
                                  d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                />
                              </g>
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                          >
                            <div>
                              createOrSelectSecret
                            </div>
                          </p>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="null-3"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <label
                        class="bp3-label"
                      >
                        <span
                          class="Tooltip--acenter"
                          data-tooltip-id="awsKmsConfigForm_awsArn"
                        >
                          connectors.awsKms.arnLabel
                        </span>
                      </label>
                      <div
                        class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                      >
                        <a
                          class="containerLink"
                          data-testid="awsArn"
                          href="/account/dummy/resources/connectors"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="key-main"
                            style="height: 12px;"
                          >
                            <svg
                              height="24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                fill="none"
                                fill-rule="nonzero"
                                stroke="#1C1C28"
                                stroke-width="0.5"
                              >
                                <path
                                  d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118c.118.01.223.067.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                />
                                <path
                                  d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                />
                              </g>
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                          >
                            <div>
                              createOrSelectSecret
                            </div>
                          </p>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="region-4"
                >
                  <label
                    class="bp3-label"
                    for="region"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="awsKmsConfigForm_region"
                    >
                      regionLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="region"
                            placeholder="- Select -"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="default-5"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <label
                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                    >
                      <input
                        name="default"
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <span
                        class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                        data-tooltip-id="awsKmsConfigForm_default"
                      >
                        connectors.hashiCorpVault.defaultVault
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    back
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    continue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;
